--- a/src/Shop/Shop.css
+++ b/src/Shop/Shop.css
@@ -1,3 +1,15 @@
+.search-container{
+    background-color: rgba(0, 0, 0, 0.85);
+    text-align: center;
+    line-height: 50px;
+    
+    
+}
+.search-container input{
+    width: 60%;
+    margin: 5px;
+    padding: 7px;
+}
 .shop-container{
     display: grid;
     grid-template-columns: 3fr 1fr;
@@ -47,4 +59,7 @@
     border-radius: 5px;
     font-weight: 400;
     font-size: 16px;
+}
+.icon-color{
+    color: gold;
 }
